tests/errors/compiler/unassignable_inc/++_to_float.c
int main()
{
	float i;
	i = 10++;
	return 0;
}
